@@ -9,6 +9,7 @@
 - Feature: [#22046] [Plugin] Add interface for crashed vehicle particle.
 - Feature: [#22085] [Plugin] The result of actions that create banners now includes the bannerIndex.
 - Feature: [#22087] [Plugin] Expose guests’ favourite rides to the plugin API.
+- Feature: [#22140] Add option to automatically close dropdown menus if Enlarged UI is enabled.
 - Improved: [#19870] Allow using new colours in UI themes.
 - Improved: [#21853] Dropdowns now automatically use multiple columns if they are too tall for the screen.
 - Improved: [#21981] Rendering performance of the map window has been improved considerably.
